Fix import form margin/spacing issues [#26787]

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -26,3 +26,11 @@
     }
   }
 }
+
+.project [data-controller="pdf-import"] {
+  margin-bottom: 20px;
+}
+
+#projects-panel [data-controller="pdf-import"] {
+  margin-bottom: 0px;
+}
